--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-rate-limit": "^3.4.1",
     "helmet": "^3.16.0",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
