--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^3.16.0",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
+    "node-cron": "^2.0.3",
     "pg": "^7.10.0",
     "sqlite3": "^4.0.6"
   }
