--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.16.4",
     "express-rate-limit": "^3.4.1",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
     "node-cron": "^2.0.3",
